--- a/src/ex3/package.json
+++ b/src/ex3/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "shuki",
-  "version": "1.0.0",
+  "name": "shuki-mondayu",
+  "version": "1.0.1",
   "description": "Shuki - a todo app",
-  "main": "main.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "shuki-mondayu": "./index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +17,8 @@
     "chalk": "^5.0.1",
     "commander": "^9.3.0",
     "node-fetch": "^3.2.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
