--- a/src/ex4/package.json
+++ b/src/ex4/package.json
@@ -15,7 +15,8 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^6.14.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
