--- a/src/package.json
+++ b/src/package.json
@@ -16,9 +16,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
-    "express-validator": "^6.14.1"
+    "express-validator": "^6.14.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "sequelize-cli": "^6.4.1"
   }
 }
