--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.1",
+    "monday-ui-react-core": "^1.36.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.0"
   },
