--- a/src/client/package.json
+++ b/src/client/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.6"
+    "@babel/preset-env": "^7.18.6",
+    "react-test-renderer": "^18.2.0"
   }
 }
