--- a/src/client/package.json
+++ b/src/client/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
-    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "monday-ui-react-core": "^1.36.1",
@@ -45,6 +44,9 @@
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-svg-transformer": "^1.0.0",
     "react-test-renderer": "^18.2.0"
   }
 }
